[package]
name = "fburl"
version = "0.2.0"
authors = ["Lzu Tao <taolzu@gmail.com>"]
edition = "2018"
description = "Get video URLs from Facebook"
license = "MIT"
keywords = ["facebook", "video", "request", "client"]
repository = "https://github.com/lzutao/fburl-rs"
categories = ["network-programming", "parsing", "web-programming"]

[badges]
travis-ci = { repository = "lzutao/fbvideo-rs", branch = "master" }

[[bin]]
path = "src/main.rs"
name = "fburl"

[workspace]
members = [
  "fbvideo",
]

[dependencies]
fbvideo = { version = "0.3", path = "fbvideo" }

[dependencies.clap]
version = "2.32"
default-features = false

[profile.release]
panic = "abort"
