[package]
name = "fburl"
version = "0.2.0"
authors = ["Lzu Tao <taolzu@gmail.com>"]
categories = ["network-programming", "parsing", "web-programming"]
edition = "2018"
keywords = ["facebook", "video", "request", "client"]
license = "MIT"
repository = "https://github.com/lzutao/fburl-rs"
description = "Get video URLs from Facebook"

[badges]
travis-ci = { repository = "lzutao/fbvideo-rs", branch = "master" }

[[bin]]
path = "src/main.rs"
name = "fburl"

[workspace]
members = [
  "fbvideo",
]

[dependencies]
fbvideo = { version = "0.3", path = "fbvideo" }

[dependencies.clap]
version = "2.32"
default-features = false

[profile.release]
panic = "abort"
