[package]
name = "fbvideo"
version = "0.3.2"
authors = ["Lzu Tao <taolzu@gmail.com>"]
categories = ["network-programming", "parsing", "web-programming"]
edition = "2018"
keywords = ["facebook", "video", "request", "client"]
license = "MIT"
repository = "https://github.com/lzutao/fburl-rs/tree/master/fbvideo"
description = "Library to get video URLs from Facebook"

[badges]
travis-ci = { repository = "lzutao/fbvideo-rs", branch = "master" }

[dependencies]
once_cell = "1"
regex = "1"
reqwest = "0.9"
